force-app/main/default/objects/Torc_User_Feedback__c/Torc_User_Feedback__c.object-meta.xml
<CustomObject>
    <label>Torc User Feedback</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Feedback#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torc User Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>