force-app/main/default/objects/Torc_User_Feedback__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <label>Next Action</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>