force-app/main/default/objects/Torc_User_Feedback__c/fields/Next_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Interview_Date__c</fullName>
    <label>Next Interview Date</label>
    <type>Date</type>
</CustomField>